--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,7 +1,7 @@
 .wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
-    padding: 40px 0px;
+    padding: 40px;
 }
